separate css for argos., atlas, fast

--- a/examples/corporate.html
+++ b/examples/corporate.html
@@ -6,15 +6,18 @@
     <title>FAST-Computing Brand - Esempio</title>
     
     <!-- Brand CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FASTComputing/brand@0.0.1/dist/fast.cssdist/css/brand.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FASTComputing/brand@0.0.1/dist/css/brand.min.css"> -->
+    <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/FAST-Computing/brand@0.0.1/dist/css/brand.min.css">
+
 </head>
 <body>
     
     <!-- Header Aziendale -->
-    <header class="brand-header">
+    <header class="corporate-header">
         <div class="container">
-            <h1>FAST-Computing</h1>
-            <p class="lead mb-0">CSS aziendali personalizzati con Bootstrap</p>
+            <h1>FAST-Computing Corporate</h1>
+            <p class="lead mb-0">CSS aziendale generico personalizzato con Bootstrap</p>
         </div>
     </header>
 
